# vast-challenge3-2025

./: README.md  exit  index.htm  package-lock.json  pyproject.toml  temp_fix.js
.claude/: settings.local.json
app/: __init__.py
app/static/css/: daily_patterns.css  graph.css  nadia_analysis.css  styles.css
app/static/js/: daily_patterns.js  export-utils.js  graph.js  nadia_analysis.js  nadia_analysis_backup.js  nadia_analysis_corrupted.js  time_patterns.js  topic_modeling.js
app/templates/: base.html  daily_patterns.html  graph.html  index.html  nadia_analysis.html  time_patterns.html  topic_modeling.html
app/visualizations/: daily_patterns.py  graph.py  nadia_analysis.py  time_patterns.py  topic_modeling.py
data/: MC3_data_parsed.csv  MC3_entities.csv  MC3_graph.json  MC3_graph_communication.json  MC3_graph_relationships.json  MC3_messages.csv  MC3_persons.csv  MC3_relationships.json  nadia_messages_analysis.csv
notebooks/: analysis.ipynb  data_analysis.ipynb  data_parser_completed.ipynb  data_parser_test.ipynb  nadia_messages_analysis.py  question1.ipynb  question3.ipynb
src/paohvis/: .packages  experiment.html  main.dart.js  paoh.html  tvgv.html  tvgv_.html
src/paohvis/css/: bootstrap.css  icons.css  icons_.css  node-link.css  node-link2.css  paoh.css
src/paohvis/data/: dbfilenames.json  dbfilenames_.json  themes.json
src/paohvis/js/: FileSaver.js  canvas-getsvg.js  package.json  package.json~  zoomSlider.js
src/paohvis/js/nodelink/: main.js  node-link.js  nodelink.js  slider.js  time-series.js  widgets.js
src/paohvis/other/: index.html
(+4 files in other folders)
