[project]
name = "vast-challenge3-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "scikit-learn>=1.7.0",
]
